Added boilerplate HTML and Foundation

--- a/index.html
+++ b/index.html
@@ -5,34 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Scott's Tots</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 <body>
-    <div id="header">
-        <img id="prisonMike" src="images/prison-mike.jpg" width="200" height="200">
+    <header>
         <h1>Scott's Tots</h1>
-        <p>This is a subtitle</p>
-    </div>
-    <div id="projectDescription">
-        <h3>Subtitle</h3>
-        <p>Project Description</p>
-    </div>
-    <hr>
-    <div id="userForm">
-        <p>
-            <label for="character">Character:</label>
-            <input id="character" type="text" name="character" autofocus>
-        </p>
-        <p>
-            <label for="rating">Rating:</label>
-            <input id="rating" type="number" name="rating" min="1" max="5">
-        </p>
-        <button id="createButton" type="button">Create</button>
-    </div>
-    <hr>
-    <div id="list">
-        <ul></ul>
-    </div>
+    </header>
     <script src="index.js"></script>
 </body>
 </html>
