--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     type="text" 
                     class="input-group-field" 
                     placeholder="Name a flick"
+                    name="flickName"
                     autofocus
                     required
                 >
