--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 </div>
             </div>       
         </form>
+
+        <ul id="flickList"></ul>
     </main>
     <script src="index.js"></script>
 </body>
