--- a/index.html
+++ b/index.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tatum Tots</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Scott's Tots</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 <body>
-    <header>
-        <h1>Tatum Tots</h1>
-    </header>
-    <main>
-        <form id="flickForm">
-            <div class="input-group">
-                <input 
-                    type="text" 
-                    class="input-group-field" 
-                    placeholder="Name a flick"
-                    name="flickName"
-                    autofocus
-                    required
-                >
-                <div class="input-group-button">
-                    <button 
-                        class="button"
-                        type="submit"
-                    >
-                        Add Flick
-                    </button>
-                </div>
-            </div>       
-        </form>
+  <header>
+    <!-- <h1>Tatum Tots</h1> -->
+  </header>
+  <main>
+    <form id="flickForm">
+      <div class="input-group">
+        <input
+          type="text"
+          class="input-group-field"
+          placeholder="Name a flick"
+          name="flickName"
+          autofocus
+          required
+        >
+        <div class="input-group-button">
+          <button
+            class="primary button"
+            type="submit"
+          >
+            Add flick
+          </button>
+        </div>
+      </div>
+    </form>
+    <ul id="flickList" class="no-bullet">
+      <li class="template flick grid-x align-middle">
+        <span class="flickName auto cell"></span>
+        <span class="actions shrink cell">
+          <button class="clear warning button">fav</button>
+          <button class="clear alert button">del</button>
+        </span>
+      </li>
+    </ul>
+  </main>
 
-        <ul id="flickList"></ul>
-    </main>
-    <script src="index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
