--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <header>
-    <!-- <h1>Tatum Tots</h1> -->
+    <h1>Scott's Tots</h1>
+    <img src="images/prison-mike.jpg" alt="">
   </header>
   <main>
     <form id="flickForm">
@@ -25,7 +26,7 @@
         >
         <div class="input-group-button">
           <button
-            class="primary button"
+            class="success button"
             type="submit"
           >
             Add flick
@@ -37,8 +38,8 @@
       <li class="template flick grid-x align-middle">
         <span class="flickName auto cell"></span>
         <span class="actions shrink cell">
-          <button class="clear warning button">fav</button>
-          <button class="clear alert button">del</button>
+          <button class="clear warning button">⭐️</button>
+          <button class="clear alert button">👎</button>
         </span>
       </li>
     </ul>
